--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div id="message">Catch the hearts! ❤️🐰🌼🍓</div>
-<div id="finalMessage">Happy birthday babyy, I love you 💖🐰🌼🍓</div>
+<div id="finalMessage" style="display:none;">Happy birthday babyy, I love you 💖🐰🌼🍓</div>
 <canvas id="gameCanvas" width="600" height="800"></canvas>
 
 <script src="script.js"></script>
