--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Happy Birthday Game!</title>
-<link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=600, initial-scale=1.0">
+  <title>Happy Birthday Game!</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div id="message">Catch the hearts! ❤️🐰🌼🍓</div>
-<div id="finalMessage" style="display:none;">Happy birthday babyy, I love you 💖🐰🌼🍓</div>
-<canvas id="gameCanvas" width="600" height="800"></canvas>
-
-<script src="script.js"></script>
+  <div id="message">Catch the hearts! ❤️🐰🌼🍓</div>
+  <div id="finalMessage" style="display:none;">Happy birthday babyy, I love you. Sorry this took so long 😭😭</div>
+  <canvas id="gameCanvas" width="600" height="800"></canvas>
+  <script src="script.js"></script>
 </body>
 </html>
