--- a/index.html
+++ b/index.html
@@ -7,9 +7,41 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="message">Catch the hearts! ❤️🐰🌼🍓</div>
-  <div id="finalMessage" style="display:none;">Happy birthday babyy, I love you. Sorry this took so long 😭😭</div>
-  <canvas id="gameCanvas" width="600" height="800"></canvas>
+  <div id="startScreen">
+    <h1>Happy Birthday Princess!</h1>
+    <button id="playBtn">Play</button>
+  </div>
+  <div id="gameUI" style="display:none;">
+    <div id="message">Catch the hearts! ❤️🐰🌼🍓</div>
+    <canvas id="gameCanvas" width="600" height="800"></canvas>
+  </div>
+  <div id="failScreen" style="display:none;">
+    <div id="failMessage">Oops! You caught the wrong thing!</div>
+    <button id="retryBtn">Try again princess</button>
+  </div>
+  <div id="endScreen" style="display:none;">
+    <div id="bouquet"></div>
+    <div id="envelopeContainer">
+      <div id="envelope">
+        <div id="envelopeFront">
+          <span class="bunny-stamp">🐰</span>
+        </div>
+        <div id="envelopeBack"></div>
+        <div id="letter">
+          <div id="letterText">
+            <h2>For you, my princess 💌</h2>
+            <p>
+              Happy birthday, my love!<br>
+              I hope your day is as beautiful and magical as you are.<br>
+              I love you always and forever.<br>
+              <span style="font-size:1.2em;">💙🐰🌼</span>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="end-caption">With all my love, here's a bouquet and my letter for you!</div>
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
