--- a/index.html
+++ b/index.html
@@ -31,10 +31,13 @@
           <div id="letterText">
             <h2>For you, my princess 💌</h2>
             <p>
-              Happy birthday, my love!<br>
-              I hope your day is as beautiful and magical as you are.<br>
-              I love you always and forever.<br>
-              <span style="font-size:1.2em;">💙🐰🌼</span>
+              Happy birthday my love!<br>
+              I'm so sorry it took so long to make this. This hurt my head and was hard to figure out how to make.<br>
+              I was afraid you were going to get angry cause you said "ok". I'm sorry I didn't answer when you asked what it was, I didn't want to spoil it for you hehe.<br>
+              Anyway, Happy birthday again, my baby. I love you so much, and I hope that your day will be as beautiful and magical as you.<br>
+              ❤️<br>
+              <br>
+              <span style="font-size:1.1em;">- your idiot, ten</span>
             </p>
           </div>
         </div>
