--- a/index.html
+++ b/index.html
@@ -3,23 +3,50 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=600, initial-scale=1.0">
-  <title>Happy Birthday Game!</title>
+  <title>Birthday Aim Trainer!</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="startScreen">
+  <div id="mainMenu">
     <h1>Happy Birthday Princess!</h1>
-    <button id="playBtn">Play</button>
+    <div class="menu-btns">
+      <button class="mode-btn" data-mode="easy">Easy</button>
+      <button class="mode-btn" data-mode="medium">Medium</button>
+      <button class="mode-btn" data-mode="hard">Hard</button>
+    </div>
+    <div class="howto">
+      <p>Aim with your mouse. Click to shoot. Press <b>R</b> or hit the reload button to reload.<br>
+      Score 30 hits in 1 minute to win. Good luck!</p>
+    </div>
   </div>
+
   <div id="gameUI" style="display:none;">
-    <div id="message">Catch the hearts! ❤️🐰🌼🍓</div>
+    <div id="hud">
+      <span id="timer"></span>
+      <span id="score"></span>
+      <span id="ammo"></span>
+      <button id="reloadBtn" title="Reload (R)">🔄 Reload</button>
+      <button id="backBtn">Back</button>
+    </div>
     <canvas id="gameCanvas" width="600" height="800"></canvas>
+    <!-- Custom heart crosshair -->
+    <div id="crosshair">❤️</div>
   </div>
+
   <div id="failScreen" style="display:none;">
-    <div id="failMessage">Oops! You caught the wrong thing!</div>
+    <div id="failMessage"></div>
     <button id="retryBtn">Try again princess</button>
+    <button id="menuBtn">Main Menu</button>
   </div>
-  <div id="endScreen" style="display:none;">
+
+  <div id="winScreen" style="display:none;">
+    <div id="congratsMsg"></div>
+    <button id="againBtn">Play Again</button>
+    <button id="menuBtn2">Main Menu</button>
+  </div>
+
+  <!-- Secret Easter Egg -->
+  <div id="easterEgg" style="display:none;">
     <div id="bouquet"></div>
     <div id="envelopeContainer">
       <div id="envelope">
@@ -44,6 +71,7 @@
       </div>
     </div>
     <div class="end-caption">With all my love, here's a bouquet and my letter for you!</div>
+    <button id="eggMenuBtn">Main Menu</button>
   </div>
   <script src="script.js"></script>
 </body>
