--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <div class="end-caption">With all my love, here's a bouquet and my letter for you!</div>
     <button id="eggMenuBtn">Main Menu</button>
   </div>
-  <audio id="popSound" src="https://cdn.jsdelivr.net/gh/sukisamazinggf/birthday-game-for-my-pretty-princess@main/pop.mp3" preload="auto"></audio>
+  <audio id="popSound" src="https://cdn.pixabay.com/audio/2022/03/15/audio_115b9bfa8a.mp3" preload="auto"></audio>
   <script src="script.js"></script>
 </body>
 </html>
