--- a/index.html
+++ b/index.html
@@ -2,62 +2,49 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Birthday Aim Trainer FPS</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=600, initial-scale=1.0">
+  <title>Happy Birthday Game!</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="startScreen" class="centered">
+  <div id="startScreen">
     <h1>Happy Birthday Princess!</h1>
-    <p>This is your Valorant/Aimlabs-style aim trainer.<br>
-    Move your mouse to aim. Click to shoot targets.<br>
-    <b>Press "Start" and then click anywhere to capture your mouse!</b></p>
-    <button id="startBtn">Start Fullscreen Aimlab</button>
-    <div class="howto">
-      <p>Score as many hits as you can in 60 seconds!<br>
-      Try for a perfect score for a surprise 🎁</p>
-    </div>
+    <button id="playBtn">Play</button>
   </div>
-  <canvas id="aimCanvas"></canvas>
-  <div id="uiOverlay" style="display:none;">
-    <div id="hud">
-      <span id="timer"></span>
-      <span id="score"></span>
-      <span id="shots"></span>
-      <span id="accuracy"></span>
-    </div>
+  <div id="gameUI" style="display:none;">
+    <div id="message">Catch the hearts! ❤️🐰🌼🍓</div>
+    <canvas id="gameCanvas" width="600" height="800"></canvas>
   </div>
-  <div id="endScreen" class="centered" style="display:none;">
-    <h2 id="endTitle"></h2>
-    <div id="summary"></div>
-    <button id="restartBtn">Play Again</button>
-    <div id="easterEgg" style="display:none;">
-      <div id="bouquet"></div>
-      <div id="envelopeContainer">
-        <div id="envelope">
-          <div id="envelopeFront">
-            <span class="bunny-stamp">🐰</span>
-          </div>
-          <div id="envelopeBack"></div>
-          <div id="letter">
-            <div id="letterText">
-              <h2>For you, my princess 💌</h2>
-              <p>
-                Happy birthday my love!<br>
-                I'm so sorry it took so long to make this. This hurt my head and was hard to figure out how to make.<br>
-                I was afraid you were going to get angry cause you said "ok". I'm sorry I didn't answer when you asked what it was, I didn't want to spoil it for you hehe.<br>
-                Anyway, Happy birthday again, my baby. I love you so much, and I hope that your day will be as beautiful and magical as you.<br>
-                ❤️<br><br>
-                <span style="font-size:1.1em;">- your idiot, ten</span>
-              </p>
-            </div>
+  <div id="failScreen" style="display:none;">
+    <div id="failMessage">Oops! You caught the wrong thing!</div>
+    <button id="retryBtn">Try again princess</button>
+  </div>
+  <div id="endScreen" style="display:none;">
+    <div id="bouquet"></div>
+    <div id="envelopeContainer">
+      <div id="envelope">
+        <div id="envelopeFront">
+          <span class="bunny-stamp">🐰</span>
+        </div>
+        <div id="envelopeBack"></div>
+        <div id="letter">
+          <div id="letterText">
+            <h2>For you, my princess 💌</h2>
+            <p>
+              Happy birthday my love!<br>
+              I'm so sorry it took so long to make this. This hurt my head and was hard to figure out how to make.<br>
+              I was afraid you were going to get angry cause you said "ok". I'm sorry I didn't answer when you asked what it was, I didn't want to spoil it for you hehe.<br>
+              Anyway, Happy birthday again, my baby. I love you so much, and I hope that your day will be as beautiful and magical as you.<br>
+              ❤️<br>
+              <br>
+              <span style="font-size:1.1em;">- your idiot, ten</span>
+            </p>
           </div>
         </div>
       </div>
-      <div class="end-caption">With all my love, here's a bouquet and my letter for you!</div>
     </div>
+    <div class="end-caption">With all my love, here's a bouquet and my letter for you!</div>
   </div>
-  <audio id="popSound" src="https://cdn.pixabay.com/audio/2022/03/15/audio_115b9bfa8a.mp3" preload="auto"></audio>
   <script src="script.js"></script>
 </body>
 </html>
